--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@
 
 /* The gif container */
 .four_zero_four_bg {
-    background-image: url(https://cdn.dribbble.com/users/285475/screenshots/2083086/dribbble_1.gif);
+    background-image: url(https://github.com/KOUSTAV2007/gif-host/raw/main/error-page.gif);
     height: 400px;
     margin-top: 20px;
     background-position: center;
@@ -119,3 +119,4 @@
         padding: 10px 20px;
     }
 }
+
